--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
-    "react-test-renderer": "^15.6.1"
+    "jsdom": "9.9.1",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^3.3.0"
   }
 }
