--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-slick": "^0.14.6",
     "style-loader": "^0.13.2",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": ">=3.1.11"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
